# Attention-based_Protein_Structure_Prediction

./: .gitignore  README.md  pyproject.toml
notebooks/: graph_exploration.py  ingest_data.py  sequence_exploration.py
src/: hello.py  main.py  next_token_prediction.py  protein_structure_prediction.py  token_prediction.py
